--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.eladrimonos.jasprintellij
-pluginName = jaspr_intellij
+pluginName = Jaspr
 pluginRepositoryUrl = https://github.com/ELadrimonos/jaspr_intellij
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
@@ -14,7 +14,7 @@ platformVersion = 2025.2.5
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
-platformPlugins =
+platformPlugins = Dart:502.0.0
 # Example: platformBundledPlugins = com.intellij.java
 platformBundledPlugins =
 # Example: platformBundledModules = intellij.spellchecker
