--- a/.github/workflows/run-ui-tests.yml
+++ b/.github/workflows/run-ui-tests.yml
@@ -48,12 +48,16 @@ jobs:
       # Set DART_SDK_PATH environment variable (Unix)
       - name: Set DART_SDK_PATH (Unix)
         if: runner.os != 'Windows'
-        run: echo "DART_SDK_PATH=$DART_SDK_ROOT" >> $GITHUB_ENV
+        run: |
+          echo "DART_SDK_PATH=$(dirname $(dirname $(which dart)))" >> $GITHUB_ENV
 
       # Set DART_SDK_PATH environment variable (Windows)
       - name: Set DART_SDK_PATH (Windows)
         if: runner.os == 'Windows'
-        run: echo "DART_SDK_PATH=$env:DART_SDK_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
+        run: |
+          $dartExe = (Get-Command dart).Source
+          $sdkPath = Split-Path (Split-Path $dartExe -Parent) -Parent
+          echo "DART_SDK_PATH=$sdkPath" | Out-File -FilePath $env:GITHUB_ENV -Append
 
       # Set up the Java environment for the next steps
       - name: Setup Java
