Project Wizard + tests (#4)
* :construction: Initial progress, show new project wizard in projects list

* :sparkles: Initial Project Wizard working for Jaspr

* :sparkles: New Project Creation and Testing for it

* :wrench: Update github tests run workflow to include Dart

* :green_heart: Try to fix Github Actions testing by adding more robust Dart SDK detection

* :fire: Remove redundant environment variable creation and use default dart env path

* :memo: Add roadmap to README.md and extract plugin description from README.md to plugin.xml

* :memo: Update description

* :memo: Update vendor name in plugin.xml

* :sparkles: Check for version mismatch on project open and show notification if so

--- a/.github/workflows/run-ui-tests.yml
+++ b/.github/workflows/run-ui-tests.yml
@@ -35,6 +35,16 @@ jobs:
       - name: Fetch Sources
         uses: actions/checkout@v6
 
+      # Set up Dart SDK for E2E tests
+      - name: Setup Dart SDK
+        uses: dart-lang/setup-dart@v1
+        with:
+          sdk: stable
+
+      # Install Jaspr CLI globally
+      - name: Install Jaspr CLI
+        run: dart pub global activate jaspr_cli
+
       # Set up the Java environment for the next steps
       - name: Setup Java
         uses: actions/setup-java@v5
